change input styles

--- a/pages/form/form10.html
+++ b/pages/form/form10.html
@@ -627,7 +627,7 @@
                                                                 <div class="sd-text__content sd-question__content"
                                                                     role="presentation"><input id="sq_321i"
                                                                         class="sd-input sd-text" type="text"
-                                                                        placeholder="" aria-required="true"
+                                                                        placeholder="Напишите ваш ответ" aria-required="true"
                                                                         aria-labelledby="sq_321_ariaTitle"
                                                                         aria-describedby="sq_321_ariaDescription"
                                                                         aria-invalid="false" data-rendered="r"></div>
@@ -652,7 +652,7 @@
                                                                 <div class="sd-text__content sd-question__content"
                                                                     role="presentation"><input id="sq_322i"
                                                                         class="sd-input sd-text" type="date"
-                                                                        max="2999-12-31" placeholder=""
+                                                                        max="2999-12-31" placeholder="Напишите ваш ответ"
                                                                         aria-required="true"
                                                                         aria-labelledby="sq_322_ariaTitle"
                                                                         aria-describedby="sq_322_ariaDescription"
