--- a/pages/form/form2.html
+++ b/pages/form/form2.html
@@ -660,7 +660,7 @@
                                                                                                     <input id="sq_323i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="true"
                                                                                                         aria-label="Фамилия"
                                                                                                         aria-invalid="false"
@@ -693,7 +693,7 @@
                                                                                                     <input id="sq_324i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="true"
                                                                                                         aria-label="Имя"
                                                                                                         aria-invalid="false"
@@ -722,7 +722,7 @@
                                                                                                     <input id="sq_325i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="false"
                                                                                                         aria-label="Отчество"
                                                                                                         aria-invalid="false"
@@ -758,7 +758,7 @@
                                                                                                         class="sd-input sd-text"
                                                                                                         type="date"
                                                                                                         max="2999-12-31"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="true"
                                                                                                         aria-label="Дата рождения"
                                                                                                         aria-invalid="false"
@@ -825,7 +825,7 @@
                                                                                                     <input id="sq_328i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="true"
                                                                                                         aria-label="Количество полных лет"
                                                                                                         aria-invalid="false"
@@ -866,7 +866,7 @@
                                                                                                     <input id="sq_329i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="true"
                                                                                                         aria-label="Образование"
                                                                                                         aria-invalid="false"
@@ -896,7 +896,7 @@
                                                                                                     <textarea
                                                                                                         id="sq_330i"
                                                                                                         class="sd-input sd-comment"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         cols="50"
                                                                                                         rows="4"
                                                                                                         aria-required="false"
@@ -929,7 +929,7 @@
                                                                                                     <input id="sq_331i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="false"
                                                                                                         aria-label="Место работы"
                                                                                                         aria-invalid="false"
@@ -958,7 +958,7 @@
                                                                                                     <input id="sq_332i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="false"
                                                                                                         aria-label="Интересы"
                                                                                                         aria-invalid="false"
@@ -994,7 +994,7 @@
                                                                                                     <input id="sq_333i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="false"
                                                                                                         aria-label="Хронические заболевания"
                                                                                                         aria-invalid="false"
@@ -1030,7 +1030,7 @@
                                                                                                     <input id="sq_334i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="false"
                                                                                                         aria-label="Группа инвалидности"
                                                                                                         aria-invalid="false"
@@ -1060,7 +1060,7 @@
                                                                                                     <input id="sq_335i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="false"
                                                                                                         aria-label="Размер обуви"
                                                                                                         aria-invalid="false"
@@ -1090,7 +1090,7 @@
                                                                                                     <input id="sq_336i"
                                                                                                         class="sd-input sd-text"
                                                                                                         type="text"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         aria-required="false"
                                                                                                         aria-label="Размер одежды"
                                                                                                         aria-invalid="false"
@@ -1120,7 +1120,7 @@
                                                                                                     <textarea
                                                                                                         id="sq_337i"
                                                                                                         class="sd-input sd-comment"
-                                                                                                        placeholder=""
+                                                                                                        placeholder="Напишите ваш ответ"
                                                                                                         cols="50"
                                                                                                         rows="4"
                                                                                                         aria-required="false"
