--- a/pages/form/form4.html
+++ b/pages/form/form4.html
@@ -751,7 +751,7 @@
                                                                 <div class="sd-text__content sd-question__content"
                                                                     role="presentation"><input id="sq_294i"
                                                                         class="sd-input sd-text" type="text"
-                                                                        placeholder="" aria-required="false"
+                                                                        placeholder="Напишите ваш ответ" aria-required="false"
                                                                         aria-labelledby="sq_294_ariaTitle"
                                                                         aria-describedby="sq_294_ariaDescription"
                                                                         aria-invalid="false" data-rendered="r"></div>
