--- a/pages/form/form5.html
+++ b/pages/form/form5.html
@@ -821,7 +821,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_296i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="true"
+                                                                                placeholder="Напишите ваш ответ" aria-required="true"
                                                                                 aria-labelledby="sq_296_ariaTitle"
                                                                                 aria-describedby="sq_296_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -854,7 +854,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_297i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="true"
+                                                                                placeholder="Напишите ваш ответ" aria-required="true"
                                                                                 aria-labelledby="sq_297_ariaTitle"
                                                                                 aria-describedby="sq_297_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -885,7 +885,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_298i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="false"
+                                                                                placeholder="Напишите ваш ответ" aria-required="false"
                                                                                 aria-labelledby="sq_298_ariaTitle"
                                                                                 aria-describedby="sq_298_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
