--- a/pages/form/form7.html
+++ b/pages/form/form7.html
@@ -841,7 +841,7 @@
                                                                                                                 id="sq_351i"
                                                                                                                 class="sd-input sd-text"
                                                                                                                 type="text"
-                                                                                                                placeholder=""
+                                                                                                                placeholder="Напишите ваш ответ"
                                                                                                                 aria-required="true"
                                                                                                                 aria-label="Название потребности"
                                                                                                                 aria-invalid="false"
@@ -878,7 +878,7 @@
                                                                                                                 id="sq_352i"
                                                                                                                 class="sd-input sd-text"
                                                                                                                 type="url"
-                                                                                                                placeholder=""
+                                                                                                                placeholder="Напишите ваш ответ"
                                                                                                                 aria-required="true"
                                                                                                                 aria-label="Ссылка на покупку"
                                                                                                                 aria-invalid="false"
@@ -913,7 +913,7 @@
                                                                                                                 id="sq_356i"
                                                                                                                 class="sd-input sd-text"
                                                                                                                 type="text"
-                                                                                                                placeholder=""
+                                                                                                                placeholder="Напишите ваш ответ"
                                                                                                                 aria-required="true"
                                                                                                                 aria-label="Количество"
                                                                                                                 aria-invalid="false"
@@ -950,7 +950,7 @@
                                                                                                                 id="sq_357i"
                                                                                                                 class="sd-input sd-text"
                                                                                                                 type="text"
-                                                                                                                placeholder=""
+                                                                                                                placeholder="Напишите ваш ответ"
                                                                                                                 aria-required="true"
                                                                                                                 aria-label="Стоимость за единицу товара (без пробелов)"
                                                                                                                 aria-invalid="false"
@@ -980,7 +980,7 @@
                                                                                                             <textarea
                                                                                                                 id="sq_359i"
                                                                                                                 class="sd-input sd-comment"
-                                                                                                                placeholder=""
+                                                                                                                placeholder="Напишите ваш ответ"
                                                                                                                 cols="50"
                                                                                                                 rows="4"
                                                                                                                 aria-required="false"
@@ -1183,7 +1183,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_312i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="false"
+                                                                                placeholder="Напишите ваш ответ" aria-required="false"
                                                                                 aria-labelledby="sq_312_ariaTitle"
                                                                                 aria-describedby="sq_312_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
