--- a/pages/form/form3.html
+++ b/pages/form/form3.html
@@ -650,7 +650,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_280i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="true"
+                                                                                placeholder="Напишите ваш ответ" aria-required="true"
                                                                                 aria-labelledby="sq_280_ariaTitle"
                                                                                 aria-describedby="sq_280_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -678,7 +678,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_281i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="true"
+                                                                                placeholder="Напишите ваш ответ" aria-required="true"
                                                                                 aria-labelledby="sq_281_ariaTitle"
                                                                                 aria-describedby="sq_281_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -713,7 +713,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_282i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="true"
+                                                                                placeholder="Напишите ваш ответ" aria-required="true"
                                                                                 aria-labelledby="sq_282_ariaTitle"
                                                                                 aria-describedby="sq_282_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -749,7 +749,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_283i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="true"
+                                                                                placeholder="Напишите ваш ответ" aria-required="true"
                                                                                 aria-labelledby="sq_283_ariaTitle"
                                                                                 aria-describedby="sq_283_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -959,7 +959,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_285i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="true"
+                                                                                placeholder="Напишите ваш ответ" aria-required="true"
                                                                                 aria-labelledby="sq_285_ariaTitle"
                                                                                 aria-describedby="sq_285_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
