--- a/pages/form/form8.html
+++ b/pages/form/form8.html
@@ -621,7 +621,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_313i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="false"
+                                                                                placeholder="Напишите ваш ответ" aria-required="false"
                                                                                 aria-labelledby="sq_313_ariaTitle"
                                                                                 aria-describedby="sq_313_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r"></div>
@@ -654,7 +654,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_314i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="false"
+                                                                                placeholder="Напишите ваш ответ" aria-required="false"
                                                                                 aria-labelledby="sq_314_ariaTitle"
                                                                                 aria-describedby="sq_314_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r"></div>
@@ -683,7 +683,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_315i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="" aria-required="false"
+                                                                                placeholder="Напишите ваш ответ" aria-required="false"
                                                                                 aria-labelledby="sq_315_ariaTitle"
                                                                                 aria-describedby="sq_315_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r"></div>
